# simple_cmake

./: CMakeLists.txt  Makefile  main.cpp
